# CodeChronicle

./: .code-workspace  .dockerignore  .env.example  .gitignore  .notes.md  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  README.md  STYLE_GUIDE.md  docker-compose.prod.yml  docker-compose.yml  fix-list.md  manage.py  pyproject.toml  pyrightconfig.json  tailwind.config.js
.github/workflows/: ci.yml  publish.yml
api/: __init__.py  band.py  formatters.py  llm_parser.py  search.py  views.py
api/search/: __init__.py  engine.py  orchestration.py
api/tests/: test_api.py  test_band.py  test_formatters.py  test_highlight.py  test_integration.py  test_llm_parser.py  test_orchestration.py  test_reference_matching.py  test_search.py  test_tfidf.py
code_chronicle/: __init__.py  urls.py  wsgi.py
code_chronicle/settings/: __init__.py  base.py  development.py  production.py
config/: code_metadata.py  keywords.py  map_loader.py  metadata.json  transitions.json  transitions.py
config/tests/: test_transitions.py
core/: __init__.py  access.py  adapters.py  admin.py  apps.py  auth_audit.py  context_processors.py  events.py  forms.py  ip_utils.py  middleware.py  models.py  permalinks.py  provision_lineage.py  provision_notes.py  rail_examples.py  stripe_handlers.py  urls.py  verification.py  views.py
core/migrations/: 0001_initial.py  0002_alter_user_username.py  0002_user_pro_courtesy.py  0003_alter_user_managers_remove_user_first_name_and_more.py  0003_querycache_queryprompt_searchhistory_top_results_and_more.py  0004_user_pdf_directory.py  0005_map_and_metadata_models.py  0006_remove_codemapnode_markdown.py  0006_remove_user_pdf_directory.py  0007_remove_codemapnode_bbox_and_more.py  0008_codemapnode_provision_transitions.py  0009_codemapnode_division.py  0010_keyword_counts_jsonfield.py  0011_keyword_idf_matview.py  0012_rename_codesystem_to_code.py  0013_provenance_models.py  0014_rename_codeedition_system_to_code.py  0015_provision_mapping_rename.py  0016_provisionversiontable_html.py  0017_meta_amendment_fields.py  0018_provision_version_clauses_m2m_assets_drop_action.py  0019_regulationclause_target_division.py  0020_corpuscurrency_and_more.py  0021_codeeditionprovisionversion_notes.py  0022_corpuscurrency_coverage_end.py  0023_engagementevent.py  0024_remove_codemapnode_code_map_delete_keywordidf_and_more.py  0025_codeeditionprovisionversion_revoked.py  0026_regulation_commencement_regulationclause_add_anchor_and_more.py  0027_regulationclause_commencement.py  0028_querycache_date_is_relative.py  0029_corpuscurrency_coverage_start.py  0030_provision_lineage.py  0031_provision_disposition.py  0032_provisiondisposition_target_reference.py  0033_codeedition_verified.py  0034_regulation_source_kind_regulation_source_url.py  0035_authevent.py  0036_elawsconsolidation.py  0037_merge_0035_authevent_0036_elawsconsolidation.py  (+3 more)
core/templatetags/: rail_tags.py
core/tests/: test_access.py  test_auth_audit.py  test_backup_userdata.py  test_consolidations.py  test_engagement.py  test_load_edition.py  test_load_maps.py  test_middleware.py  test_models.py  test_provision_lineage.py  test_provision_notes.py  test_regulation_views.py  test_templates.py  test_verification.py  test_viewer_nav.py  test_viewer_navigation.py
core/views/: __init__.py  billing.py  history.py  pages.py  regulation.py  search.py
data/: elaws_consolidations.json
docs/: edit-prod-settings.md
docs/security/: breach-response-plan.md  db-roles.sql  disaster-recovery-plan.md
nginx/: nginx.conf
prompts/: planning-notes.md
prompts-and-notes/: .notes.md  PDFS.md  STRIPE.md  STYLE_GUIDE.md  ccm-integration-plan.md  deployment-plan-migrations.md  edition-provenance-restructure.md  keyword-idf-plan.md  planning-notes.md  refactor.md  search-results-navigation-and-versioning-plan.md  todo-list.md
prompts-and-notes/done/: deployment-plan-dockerization.md  deployment-plan-migrations.md  fix-rate-limits.md  pricing.md  privacy-policy.md  tos.md
scripts/: build_elaws_consolidations.py  entrypoint.sh  extract_keywords.py  run_mypy.py
services/: __init__.py  search_service.py
static/css/: elaws.css  input.css
static/js/: pdf-viewer.mjs
tasks/: 1.1-node-span-model-and-map-import.md  1.2-accordion-result-list.md  1.3-bounded-pdf-span-rendering.md  1.4-result-justification-slot.md  2.1-backend-parent-child-grouping.md  2.2-grouped-accordion-cards.md  2.3-standalone-results-regression.md  3.1-transition-metadata-model.md  3.2-overlap-aware-edition-resolution.md  3.3-transition-banner-and-compare-cards.md  3.4-curate-initial-transition-data.md  4.1-viewer-mode-shell.md  4.2-viewer-edition-navigation.md  4.3-viewer-query-context-emphasis.md  5.1-mobile-transition-compare.md  5.2-mobile-accordion-and-grouping.md  5.4-static-asset-versioning.md  6.1-engagement-click-tracking.md  byod-pdf-viewer-fate.md  example-query-transition-period.md  free-tier-obc2006-scope.md  interactive-element-taxonomy.md  intro-explanation-page.md  provision-lineage.md  provision-source-links.md  remove-free-tier-gating-flag.md  security-hardening-rollout.md  verification-coverage.md  viewer-nav-via-provision-mapping.md
tasks/complete/: 1.4-result-justification-slot.md  2.2-grouped-accordion-cards.md  3.1-transition-metadata-model.md  3.2-overlap-aware-edition-resolution.md  3.5-subset-provision-transitions.md  4.4-viewer-elaws-content.md  5.3-sentence-level-search.md  5.3-tailwind-cli-build.md  example-query-transition-period.md  provision-mapping-rename.md
tasks/provenance/: 00-overview.md  1-schema.md  2-ingestion.md  4-display.md  5-cleanup.md  ccm-output-contract.md  inline-html-image-assets.md  (+1 more)
templates/: base.html  data_sources.html  history.html  locked_edition.html  pricing.html  pricing_early_access.html  privacy_policy.html  search.html  settings.html  stripe_success.html  terms_of_service.html  verification_guide.html  viewer_mode.html
(+77 files in other folders)
