[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-chronicle"
version = "0.1.0"
description = "Historical Canadian Building Code Search"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "IskanderBlue"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Django core
    "Django>=5.0,<6.0",
    "django-ninja>=1.0",
    # PostgreSQL driver.  psycopg (v3) — chosen over psycopg2 for its
    # first-class async support.  Django's django.db.backends.postgresql
    # backend auto-detects v3 when installed; no ENGINE change needed.
    "psycopg[binary]>=3.1",

    # Building code search
    "building-code-mcp>=1.2.0",

    # LLM
    "anthropic>=0.18",

    # AWS
    "boto3>=1.34",

    # GCP (runtime secret fetching in production)
    "google-cloud-secret-manager>=2.18",

    # Auth & Payments
    "django-allauth>=0.60",
    "dj-stripe>=2.8",
    # dj-stripe 2.10.x breaks on stripe 15 (retrieved objects lost the dict
    # interface its sync relies on -> webhook processing AttributeError);
    # 14.3.0 verified working in prod. Revisit when dj-stripe supports v15.
    "stripe>=14.3,<15",

    # Building code search extras
    "pymupdf>=1.23.0",
    "rapidfuzz>=3.5.0",
    "markdown>=3.6",

    # Utilities
    "coloured-logger>=1.0.1",
    "python-dotenv>=1.0",
    "dj-database-url>=2.1.0",
    "gunicorn>=21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.7",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "pre-commit>=3.6",
    # Type checking.  django-stubs serves BOTH checkers: its stub files feed
    # Pyright (editor), and its mypy plugin (mypy_django_plugin) synthesises
    # the dynamic model attributes — reverse relations, pk, _id shadows,
    # custom managers — that Pyright cannot see.  The [compatible-mypy] extra
    # pins a mypy version known to work with these stubs.
    "django-stubs[compatible-mypy]>=6.0",
]

[project.urls]
Homepage = "https://github.com/IskanderBlue/CodeChronicle"

[tool.setuptools.packages.find]
where = ["."]
include = ["code_chronicle*", "api*", "core*", "config*", "services*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line length handled separately

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
# Retrofit onto an existing codebase: start pragmatic, tighten over time.
check_untyped_defs = true
warn_unused_ignores = true
# Resolve files relative to the project root so e.g. config/code_metadata.py
# is only ever "config.code_metadata", never also top-level "code_metadata".
explicit_package_bases = true
mypy_path = "."
# Migrations are generated; type-checking them is noise.
exclude = ['/migrations/', '^venv/']

# These third-party libraries ship no type information (no py.typed / no stub
# package).  Silence "missing stubs" for THESE modules only — so a typo'd
# first-party import (e.g. `from core.modelz import X`) still errors, instead
# of being hidden by a blanket ignore_missing_imports.
[[tool.mypy.overrides]]
module = [
    "building_code_mcp.*",
    "allauth.*",
    "djstripe.*",
    "coloured_logger",
    "markdown",
    "boto3.*",
    "botocore.*",
]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "code_chronicle.settings.development"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "code_chronicle.settings.development"
python_files = ["test_*.py"]
addopts = "-v --tb=short"
markers = [
    "integration: integration tests that hit the real database (deselect with -m 'not integration')",
]
filterwarnings = [
    "ignore:The default scheme will be changed from 'http' to 'https' in Django 6.0.*:django.utils.deprecation.RemovedInDjango60Warning:djstripe\\.admin\\.forms",
]
